# funwithparticles

./: .gitmodules  AndroidManifest.xml  README.md  ant.properties  bionicdeploy.sh  enlightendeploy.sh  fulldeploy.sh  ldeploy.sh
jni/: CMakeLists.txt
jni/src/: .CMakeLists.txt.swp  .gl2_fortran.f90.swp  .gl_2es.f90.swp  Android.mk  Application.mk  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
